--- a/src/component/navbar/Navbar.css
+++ b/src/component/navbar/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 10%;
+    padding: 10px 30px ;
     position: fixed;
     top: 0;
     width: 100%;
