--- a/src/component/navbar/Navbar.css
+++ b/src/component/navbar/Navbar.css
@@ -2,10 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 30px ;
+    padding: 10px 60px ;
     position: fixed;
     top: 0;
-    width: 100%;
+     left:0; 
     color: white;
     z-index: 9999;
     background-color: #282C33;
