--- a/src/component/navbar/Navbar.css
+++ b/src/component/navbar/Navbar.css
@@ -2,13 +2,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 60px ;
+    padding: 10px 20px ;
     position: fixed;
     top: 0;
      left:0; 
     color: white;
     z-index: 9999;
     background-color: #282C33;
+  background-color: red;
   }
   
   .Navbar .links ul {
